Update .env.dist and readme descriptions + Add missing env variables addition in crontab builder

--- a/.env.dist
+++ b/.env.dist
@@ -1,2 +1,2 @@
-# Env variables go here, example :
+# Env variables go here, example with PATH variable (which should already exists in your existing env variables) :
 # export PATH=/usr/local/bin:/usr/bin:/bin:/usr/local/games:/usr/games
